--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,36 @@ body {
   right: 25rem;
 }
 
+.resume-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+  background-color: #ddf0f8;
+  padding: 2rem;
+  border-radius: 20px;
+  text-align: center;
+}
+.resume-container h1 {
+  font: bold 35px sans-serif;
+}
+.resume-container a {
+  text-decoration: none;
+}
+.resume-container button {
+  width: 10rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font: 18px sans-serif;
+  background-color: #a6e9ff;
+}
+.resume-container button img {
+  transform: scale(0.7);
+}
+
 #project-header {
   font-size: 60px;
 }
